zeit.content.cp changes
=======================

0.10 (unreleased)
-----------------

- Bessere Anzeige von Fehlern im RSS-Block (#5678).

- Modulnamen in der Modulbibliothek werden jetzt übersetzt (u.A. #5677).


0.9.1 (2009-06-24)
------------------

- »leader-upright«-Layout repariert (#5570).

- Die CenterPage enthält einen neuen Abschnitt ``<feed>``, in dem
  ``<reference>``s zu den n letzten Teasern aus dem Aufmacherbereich stehen;
  jeweils der erste Teaser eines Teaserblocks wird dort eingefügt (#4884).

  Die Einträge sind umgekehrt chronologisch geordnet, d. h. um den eigentlichen
  RSS-Feed zu erzeugen, kann das XSLT die ersten x Einträge nehmen.
  n ist konfigurierbar über product config ``cp-feed-max-items``
  (im Moment n=200).


0.9 (2009-06-18)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Modul-Bibliothek: Tab für »alle«.

- Die Sidebar wird beim Öffnen des Editors automatisch ausgeblendet (#5038).

Technische Änderungen
~~~~~~~~~~~~~~~~~~~~~

- Content-Source für CenterPages hinzugefügt.

0.8 (2009-06-09)
----------------

- ``type``-Attribut auf ``<centerpage>`` (#5030, #5480).

- Contextabhängige Layouts (#5034).

- Registrierung via Martian.

- Bessere Texte

0.7 (2009-05-26)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Neue Content Blöcke "Quiz" (#5279) und "Vollgraphisch" (#5278) wurden
  hinzugefügt.

- Beim Bearbeiten eines Teaserblocks können jetzt Teaser direkt in die Liste
  gezogen werden.

- Blockblibliothek

- Tabs im Block-Bearbeiten (#5323)

- Freie Teaser können im CMS direkt bearbeitet werden (#5059).

- Autopilot in der Aufmacherfläche nicht mehr möglich (verhindert Kreise,
  #5031).

Technische Änderungen
~~~~~~~~~~~~~~~~~~~~~

- Interface-Umstrukturierung um genauer zwischen Fläche, Region und Block
  unterscheiden zu können.


0.6 (2009-05-17)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Neue Content Blöcke "Audio" (#5276) und "Video" (#5051) wurden hinzugefügt.
